# locust-standalone

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  locust.conf  pip.conf  pyproject.toml  setup.cfg
src/locust_standalone/: __init__.py  config.py  config_schemas.py  locustfile.py
src/locust_standalone/schemas/: __init__.py  common_schemas.py  config_schemas.py
