[tool.poetry]
name = "locust-standalone"
version = "0.1.0"
description = ""
authors = ["Viacheslav Kolupaev <v.s.kolupaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.10.1"
locust-plugins = "^2.6.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "0.931"
wemake-python-styleguide = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
