##########################################################################################
# Copyright (c) 2022. Viacheslav Kolupaev, https://vkolupaev.com/
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this
# file except in compliance with the License. You may obtain a copy of the License at
#
#   https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under
# the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied. See the License for the specific language governing
# permissions and limitations under the License.
##########################################################################################

##########################################################################################
# Unified Python project settings file.
#
# First introduced in PEP 518 and later expanded in PEP 517, PEP 621 and PEP 660.
# This file contains build system requirements and information, which are used by pip
# to build the package.
##########################################################################################

[tool.poetry]
name = "locust-standalone"
version = "0.1.0"
description = ""
authors = ["Viacheslav Kolupaev <v.s.kolupaev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
locust = "^2.10.1"
locust-plugins = "^2.6.8"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}
typeguard = "^2.13.3"
orjson = "^3.7.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "0.931"
wemake-python-styleguide = "^0.16.1"
nitpick = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.nitpick]
style = [
    "https://gitlab.com/vkolupaev/styleguide-config/-/raw/main/styles/nitpick_style.toml",
]
